--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./../node_modules/choices.js/public/assets/styles/choices.min.css">
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
